--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="conyainer">
+        <div class="row">
+            <h1>Github task </h1>
+        </div>
+    </div>
 </body>
 </html>
