--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="conyainer">
         <div class="row">
             <h1>Github task </h1>
+            <p>this is github is very easy and connect to git besh </p>
         </div>
     </div>
 </body>
